# 19/06/2018
* test neural network feedforward
* slight refactor of the samples and the tests

# 14/06/2016
* first back propagation 

# 21/06/2016
* Implemented test ttt agent factory
* Implemented test ttt agent (rubish)
* Implemented test ttt fitness calculator