@@ -6,7 +6,6 @@
 #include <cfloat>
 #include <cstdarg>
 
-#include "../../src/NetworkConfiguration.h"
 #include "../../src/NeuralNetwork.h"
 
 using namespace std;
@@ -52,11 +51,25 @@ void test_calculate_total_error(NeuralNetwork * network, vector<float> input, ve
   }
 }
 
+void test_train_model(NeuralNetwork * network, vector<float> input, vector<float> weights, vector<float> output) {
+  network->loadWeights(weights);
+
+  while(network->train(input, output) > 0.000001);
+  vector<float> out = network->feedForward(input);
+
+  if (abs(out[0]-output[0]) > 0.01) {
+    cout << "[*] test_train_model - FAILED" << endl;
+    exit(1);
+  } else {
+    cout << "[*] test_train_model - PASSED" << endl;
+  }
+}
+
 int main(int argc, char ** argv) {
   srand (static_cast <unsigned> (time(0)));
 
-  NetworkConfiguration * configuration = new NetworkConfiguration(2,1,2,2);
-  NeuralNetwork * network = new NeuralNetwork(configuration);
+  NeuralNetwork * network = new NeuralNetwork(2, 2, 1, 2);
+  network->init();
 
   vector<float> w = gen_vector(12, 0.15f, 0.2f, 0.35f, 0.25, 0.30, 0.35, 0.40, 0.45, 0.60, 0.50, 0.55, 0.60);
   vector<float> input = gen_vector(2, 0.05, 0.1);
@@ -65,5 +78,6 @@ int main(int argc, char ** argv) {
   cout << "\n Running test battery \n----------------------" << endl;
   test_forward_pass(network, input, w);
   test_calculate_total_error(network, input, w, output);
+  test_train_model(network, input, w, output);
   cout << endl;
 }
